[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/grid.png" type="Texture" id=1]
[ext_resource path="res://scripts/board.gd" type="Script" id=2]
[ext_resource path="res://assets/square.png" type="Texture" id=3]
[ext_resource path="res://assets/pieces/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/pieces/pawn.png" type="Texture" id=5]
[ext_resource path="res://assets/pieces/ring.png" type="Texture" id=6]
[ext_resource path="res://assets/x.png" type="Texture" id=7]
[ext_resource path="res://assets/arrow.png" type="Texture" id=8]

[sub_resource type="TileSet" id=1]
0/name = "grid.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 13 )

[node name="board" type="Node2D"]
script = ExtResource( 2 )

[node name="grid" type="TileMap" parent="."]
modulate = Color( 0.054902, 0.27451, 0.470588, 1 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0 )

[node name="tiles" type="Position2D" parent="."]

[node name="pieces" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.0588235, 0.0588235, 0.0588235, 0.160784 )
position = Vector2( 288, 97 )
scale = Vector2( 8.96875, 3 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
self_modulate = Color( 0.690196, 0.690196, 0.690196, 0.160784 )
position = Vector2( 289, 479 )
scale = Vector2( 8.96875, 3 )
texture = ExtResource( 3 )

[node name="grid2" type="TileMap" parent="."]
modulate = Color( 0.054902, 0.27451, 0.470588, 1 )
z_index = 1
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0 )

[node name="Sprite" type="Sprite" parent="grid2"]
modulate = Color( 0.780392, 1, 0.760784, 1 )
position = Vector2( 288, 288 )
scale = Vector2( 9.25, 9.25 )
z_index = -10
texture = ExtResource( 3 )

[node name="stack_box" type="Position2D" parent="."]
visible = false
position = Vector2( -350, -326 )
z_index = 9

[node name="Sprite" type="Sprite" parent="stack_box"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
position = Vector2( -92, 60.5 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="ring" type="Sprite" parent="stack_box/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 6 )

[node name="icon" type="Sprite" parent="stack_box/Sprite/ring"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="stack_box"]
visible = false
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
position = Vector2( -92, 0.5 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="ring" type="Sprite" parent="stack_box/Sprite2"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 6 )

[node name="icon" type="Sprite" parent="stack_box/Sprite2/ring"]
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="stack_box"]
visible = false
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
position = Vector2( -92, -59.5 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="ring" type="Sprite" parent="stack_box/Sprite3"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 6 )

[node name="icon" type="Sprite" parent="stack_box/Sprite3/ring"]
texture = ExtResource( 5 )

[node name="back" type="Sprite" parent="stack_box"]
self_modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
position = Vector2( -81.25, 5.57303e-06 )
scale = Vector2( 1.46094, 2.9375 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="stack_box/back"]
self_modulate = Color( 0.2, 0.2, 0.2, 1 )
show_behind_parent = true
position = Vector2( 0, -0.170213 )
scale = Vector2( 1.1, 1.05851 )
texture = ExtResource( 3 )

[node name="dots" type="Position2D" parent="stack_box"]
position = Vector2( -92, 0.499992 )
z_index = -1

[node name="Sprite" type="Sprite" parent="stack_box/dots"]
self_modulate = Color( 0.164706, 0.164706, 0.164706, 1 )
position = Vector2( 0, -60 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="stack_box/dots"]
self_modulate = Color( 0.164706, 0.164706, 0.164706, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="x" type="TouchScreenButton" parent="stack_box"]
position = Vector2( -42, -89 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="stack_box/x"]
modulate = Color( 0.576471, 0.192157, 0.192157, 1 )
scale = Vector2( 0.403125, 0.3875 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="stack_box/x"]
modulate = Color( 1, 0.603922, 0.603922, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name=">" type="Sprite" parent="stack_box"]
modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -50, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="move" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( -713, -214 )
texture = ExtResource( 3 )

[connection signal="pressed" from="stack_box/x" to="." method="_on_x_pressed"]
